--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,33 @@
-#main-time {
-  font-size: 5vw;
+body {
+  font-family: "Overpass Mono", monospace;
+  background-color: #263238;
+  color: #fff;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+}
+
+.grid-item {
+  justify-self: center;
+  align-self: center;
+}
+
+.time {
+  font-size: 4vw;
+  /* color: #888888; */
+  text-align: center;
+}
+
+.label {
+  margin-bottom: 0;
+  text-align: center;
+  font-size: 20px;
+  color: #bbb;
+}
+
+#swatch-time {
+  /* color: #333; */
 }
