--- a/styles/global.css
+++ b/styles/global.css
@@ -17,17 +17,22 @@ body {
 
 .time {
   font-size: 4vw;
-  /* color: #888888; */
   text-align: center;
+  line-height: 0.55;
 }
 
 .label {
-  margin-bottom: 0;
+  margin: 10px 0 0;
   text-align: center;
   font-size: 20px;
   color: #bbb;
 }
 
-#swatch-time {
-  /* color: #333; */
+#unix-time-milliseconds {
+  color: gray;
+  font-size: 2vw;
 }
+
+/* #swatch-time {
+  color: #333;
+} */
