--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+.frow {
+  min-width: 0;
+}
+
 body {
   font-family: "Overpass Mono", monospace;
   background-color: #263238;
@@ -15,7 +19,7 @@ body {
   align-self: center;
 }
 
-.meridian-wrapper {
+.meridian-container {
   position: relative;
 }
 
@@ -25,25 +29,26 @@ body {
   line-height: 100%;
 }
 
+.additional-time {
+  color: #ddd;
+  font-size: 2vw;
+}
+
 .meridian {
   position: absolute;
   bottom: 22%;
-  right: -14%;
-  color: gray;
-  font-size: 2vw;
+  right: -20%;
+  color: #999;
+  font-size: 1.25vw;
   line-height: 0.55;
 }
 
 .label {
   margin: 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   color: #bbb;
-}
-
-#unix-time-milliseconds {
-  color: gray;
-  font-size: 2vw;
+  text-transform: uppercase;
 }
 
 /* #swatch-time {
