--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,17 @@ body {
   color: #fff;
 }
 
+#seconds-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 0;
+  background-color: #fff;
+  transition: width 1s;
+  opacity: 0.7;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 50% 50%;
