--- a/styles/global.css
+++ b/styles/global.css
@@ -8,15 +8,13 @@ body {
   color: #fff;
 }
 
-#seconds-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0;
-  background-color: #fff;
-  transition: width 1s;
-  opacity: 0.7;
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.7;
+  }
 }
 
 .grid {
@@ -62,6 +60,14 @@ body {
   text-transform: uppercase;
 }
 
-/* #swatch-time {
-  color: #333;
-} */
+#seconds-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 0;
+  background-color: #fff;
+  transition: width 1s;
+  opacity: 0.7;
+  animation: fade-in 10s linear;
+}
