--- a/styles/global.css
+++ b/styles/global.css
@@ -85,9 +85,11 @@ body {
   bottom: 0;
   left: 0;
   height: 3px;
-  width: 0;
+  width: 33%;
   background-color: #fff;
   transition: width 1s;
   opacity: 0.7;
   animation: fade-in 10s linear;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
