--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,23 @@ body {
   }
 }
 
+.byline {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #fff;
+  font-size: 12px;
+  text-decoration: none;
+  opacity: 0.4;
+  z-index: 1;
+  transition: opacity 0.4s;
+}
+
+.byline:hover {
+  opacity: 0.7;
+  color: #fff;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 50% 50%;
